--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hirewire",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/IkonicRes/HireWire#readme",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "mysql2": "^3.5.2"
-  }
+    "mysql2": "^3.5.2",
+    "tinygradient": "^1.1.5",
+    "chalk": "^4.1.2"
+  },
+  "description": ""
 }
