--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/IkonicRes/HireWire#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
+    "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
     "inquirer": "^8.2.4",
     "mysql2": "^3.5.2",
-    "tinygradient": "^1.1.5",
-    "chalk": "^4.1.2"
+    "tinygradient": "^1.1.5"
   },
   "description": ""
 }
